tests/bad/match_upon.lens
stream upon (hi){
    print(e.hi)
}
